# PagePilot

./: .gitignore  README.md  clear_results.py  config.py  config.yaml  create_raw_element_data.py  dashboard.py  dashboard_utils.py  data_preprocessing.py  dqn_trainer.py  enhanced_reward.py  evaluation.py  generate_dataset.py  gnn_agent.py  gnn_trainer.py  main.py  propose.md  pyproject.toml  retailrocket_analysis.py  reward_label_generator.py  reward_simulator_trainer.py  rl_env.py  synthetic_data_generator.py  train_reward_simulator.py  utils.py  verify_env.py  visualize_results.py  waveui_vectorization.py  work_log.md
docs/: data_analysis_summary.md  data_visualization_report.md  plan.md  process.md  project_report.md  project_report_ko.md  refactored_plan.md  retailrocket_analysis_summary.md
local_web/: index.html  style.css
models/: dqn_live_model.pth  dqn_model.pth  reward_simulator_lgbm.joblib  reward_simulator_lr.joblib
results/: dummy_results.json
