[project]
name = "pagepilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "bleach==6.2.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "datasets==3.6.0",
    "dill==0.3.8",
    "filelock==3.18.0",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "hf-xet==1.1.5",
    "huggingface-hub==0.33.2",
    "idna==3.10",
    "kaggle==1.7.4.5",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "pyarrow==20.0.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "six==1.17.0",
    "text-unidecode==1.3",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "webencodings==0.5.1",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
